[package]
name = "xitca-web-worker"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
serde_json = "1.0.89"
worker = "0.0.12"
xitca-http = { version = "0.1", default-features = false, features = ["util-service"] }
xitca-service = "0.1"
xitca-unsafe-collection = "0.1"

[patch.crates-io]
xitca-http = { git = "https://github.com/HFQR/xitca-web", rev = "893f958926684363290a69573d68f0e176c80256" }
xitca-io = { git = "https://github.com/HFQR/xitca-web", rev = "893f958926684363290a69573d68f0e176c80256" }
xitca-service = { git = "https://github.com/HFQR/xitca-web", rev = "893f958926684363290a69573d68f0e176c80256" }
xitca-unsafe-collection = { git = "https://github.com/HFQR/xitca-web", rev = "893f958926684363290a69573d68f0e176c80256" }

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
